objects/HealthCloudGA__EHRProcedurePerformer__c.object
<CustomObject>
    <description>Junction object between EHR Procedure and EHR Practitioner. Used to identify the practitioners that were involved in a procedure and the role they played.</description>
    <fields>
        <fullName>HealthCloudGA__EHRPractitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Practitioner involved in the procedure.</description>
        <label>Performer</label>
        <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
        <relationshipLabel>EHR Procedure Performers</relationshipLabel>
        <relationshipName>EHRProcedurePerformers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EHRProcedure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Procedure performed by the practitioner.</description>
        <label>Procedure</label>
        <referenceTo>HealthCloudGA__EHRProcedure__c</referenceTo>
        <relationshipLabel>EHR Procedure Performers</relationshipLabel>
        <relationshipName>EHRProcedurePerformers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PerformerRole__c</fullName>
        <description>Practitioner&apos;s role during the procedure.</description>
        <label>Performer Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EHR Procedure Performer</label>
    <listViews>
        <fullName>HealthCloudGA__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ProcPerformer - {0}</displayFormat>
        <label>EHR Procedure Performer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Procedure Performers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>